@@ -62,6 +62,37 @@ def good_case8():
     return funs
 
 
+def good_case9():
+    """Ignore when the cell var is not defined in a loop"""
+    i = 10
+    lst = []
+    for _ in range(10):
+        lst.append(lambda: i)
+    return lst
+
+
+def good_case10():
+    """Ignore when a loop variable is showdowed by an inner function"""
+    lst = []
+    for i in range(10):  # pylint: disable=unused-variable
+        def func():
+            i = 100
+            def func2(arg=i):
+                return arg
+
+            return func2
+
+        lst.append(func)
+    return lst
+
+
+def good_case_issue3107():
+    """Eager binding of cell variable when used in a non-trivial default argument expression.
+    """
+    for i in [[2], [3]]:
+        next(filter(lambda j, ix=i[0]: j == ix, [1, 3]))
+
+
 def bad_case():
     """Closing over a loop variable."""
     lst = []
@@ -121,6 +152,63 @@ def bad_case6():
         print(j)
         lst.append(lambda: i)  # [cell-var-from-loop]
     return lst
+
+
+def bad_case7():
+    """Multiple variables unpacked in comprehension."""
+    return [
+        lambda: (
+            x  # [cell-var-from-loop]
+            + y)  # [cell-var-from-loop]
+        for x, y in ((1, 2), (3, 4), (5, 6))
+    ]
+
+
+def bad_case8():
+    """Closing over variable defined in loop below the function."""
+    lst = []
+    for i in range(10):
+        lst.append(lambda: j)  # [cell-var-from-loop]
+        j = i * i
+    return lst
+
+
+def bad_case9():
+    """Detect when loop variable shadows an outer assignment."""
+    lst = []
+    i = 100
+    for i in range(10):
+        lst.append(lambda: i)  # [cell-var-from-loop]
+    return lst
+
+
+def bad_case10():
+    """Detect when a loop variable is the default argument for a nested function"""
+    lst = []
+    for i in range(10):
+        def func():
+            def func2(arg=i):  # [cell-var-from-loop]
+                return arg
+
+            return func2
+
+        lst.append(func)
+    return lst
+
+
+def bad_case_issue2846():
+    """Closing over variable that is used within a comprehension in the function body."""
+    lst_a = [
+        (lambda: n)  # [cell-var-from-loop]
+        for n in range(3)
+    ]
+
+    lst_b = [
+        (lambda: [n for _ in range(3)])  # [cell-var-from-loop]
+        for n in range(3)
+    ]
+
+    return lst_a, lst_b
 
 
 class Test(Enum):
