@@ -1,6 +1,13 @@
-cell-var-from-loop:70:27:bad_case.<lambda>:Cell variable i defined in loop
-cell-var-from-loop:75:20:bad_case2.<lambda>:Cell variable i defined in loop
-cell-var-from-loop:83:27:bad_case3.<lambda>:Cell variable j defined in loop
-cell-var-from-loop:93:19:bad_case4.nested:Cell variable i defined in loop
-cell-var-from-loop:114:20:bad_case5.<lambda>:Cell variable i defined in loop
-cell-var-from-loop:122:27:bad_case6.<lambda>:Cell variable i defined in loop
+cell-var-from-loop:101:27:bad_case.<lambda>:Cell variable i defined in loop:HIGH
+cell-var-from-loop:106:20:bad_case2.<lambda>:Cell variable i defined in loop:HIGH
+cell-var-from-loop:114:27:bad_case3.<lambda>:Cell variable j defined in loop:HIGH
+cell-var-from-loop:124:19:bad_case4.nested:Cell variable i defined in loop:HIGH
+cell-var-from-loop:145:20:bad_case5.<lambda>:Cell variable i defined in loop:HIGH
+cell-var-from-loop:153:27:bad_case6.<lambda>:Cell variable i defined in loop:HIGH
+cell-var-from-loop:161:12:bad_case7.<lambda>:Cell variable x defined in loop:HIGH
+cell-var-from-loop:162:14:bad_case7.<lambda>:Cell variable y defined in loop:HIGH
+cell-var-from-loop:171:27:bad_case8.<lambda>:Cell variable j defined in loop:HIGH
+cell-var-from-loop:181:27:bad_case9.<lambda>:Cell variable i defined in loop:HIGH
+cell-var-from-loop:190:26:bad_case10.func.func2:Cell variable i defined in loop:HIGH
+cell-var-from-loop:202:17:bad_case_issue2846.<lambda>:Cell variable n defined in loop:HIGH
+cell-var-from-loop:207:18:bad_case_issue2846.<lambda>:Cell variable n defined in loop:HIGH
